[gd_scene load_steps=5 format=3 uid="uid://c46olgw3k756f"]

[ext_resource type="PackedScene" uid="uid://bnrrh7qebrkas" path="res://ui/menus/base/base_menu.tscn" id="1_4lrno"]
[ext_resource type="Script" path="res://ui/menus/pause_menu/pause_menu.gd" id="2_mfyp8"]

[sub_resource type="InputEventAction" id="InputEventAction_akdoc"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_8jjdk"]
events = [SubResource("InputEventAction_akdoc")]

[node name="PauseMenu" instance=ExtResource("1_4lrno")]
script = ExtResource("2_mfyp8")

[node name="Panel" type="Panel" parent="CenterContainer" index="0"]
custom_minimum_size = Vector2(300, 200)
offset_left = 426.0
offset_top = 224.0
offset_right = 726.0
offset_bottom = 424.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer" index="0"]
offset_left = 16.0
offset_top = 16.0
offset_right = 284.0
offset_bottom = 184.0

[node name="Label" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" index="0"]
offset_right = 268.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 22
text = " Pause Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" index="1"]
offset_top = 38.0
offset_right = 268.0
offset_bottom = 101.0
size_flags_vertical = 3
shortcut = SubResource("Shortcut_8jjdk")
text = "Resume"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" index="2"]
offset_top = 105.0
offset_right = 268.0
offset_bottom = 168.0
size_flags_vertical = 3
text = "Quit"
